--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "project-1",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
+    "tw:build": "tailwindcss build -i ./public/css/tailwind.css -o ./public/css/main.css",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "author": "Dhrumit Ketan Parekh",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "daisyui": "^4.4.20",
+    "ejs": "^3.1.9",
     "express": "^4.18.2"
-  }
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.6"
+  },
+  "description": ""
 }
