--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "bcrypt": "^5.1.1",
+    "client-sessions": "^0.8.0",
     "daisyui": "^4.4.20",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "psql": "^0.0.1",
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
