--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "bcrypt": "^5.1.1",
     "client-sessions": "^0.8.0",
+    "cloudinary": "^1.41.1",
     "daisyui": "^4.4.20",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
@@ -26,5 +27,3 @@
   "devDependencies": {
     "tailwindcss": "^3.3.6"
   },
-  "description": ""
-}
